--- a/final/cs472_final_wongnich.bib
+++ b/final/cs472_final_wongnich.bib
@@ -1,35 +1,35 @@
 
-@misc{ kodi:doc,
-      author = "Andrei Istodorescu",
-      title = "Rasberry Pi 2 CarPC",
-      year = "2017",
-      url = "http://engineering-diy.blogspot.ro/search/label/kodi",
-      note = "[Online; accessed 21-November-2017]"
+@misc{ ARM:All,
+      author = "David Chisnall",
+      title = "Understanding ARM Architectures",
+      year = "2010",
+      url = "http://www.informit.com/articles/article.aspx?p=1620207",
+      note = "[Online; accessed 4-December-2017]"
 }
 
-@misc{ clementine,
-   	author = "Clementine",
-   	title = "Clementine About and Features",
+@misc{ ARM:Timeline,
+   	author = "The Telegraph",
+   	title = "History of ARM: from Acorn to Apple",
+   	year = "2011",
+   	url = "http://www.telegraph.co.uk/finance/newsbysector/epic/arm/8243162/History-of-ARM-from-Acorn-to-Apple.html",
+   	note = "[Online; accessed 4-December-2017]"
+}
+
+@misc{ ARM:Inside,
+   	author = "Peter Cockerell",
+   	title = "Inside the ARM",
    	year = "2017",
-   	url = "https://www.clementine-player.org/",
-   	note = "[Online; accessed 21-November-2017]"
-}
-
-@misc{ kodi:features,
-   	author = "Kodi",
-   	title = "About Kodi",
-   	year = "2017",
-   	url = "https://kodi.tv/about",
-   	note = "[Online; accessed 21-November-2017]"
+   	url = "http://www.peter-cockerell.net/aalp/html/ch-2.html",
+   	note = "[Online; accessed 4-December-2017]"
 }
 
 
-@misc{ vlc:features,
-      author = "VideoLAN",
-      title = "VLC Features",
+@misc{ ARM:Addressing,
+      author = "University of Regina",
+      title = "Summary of ARM addressing Modes",
       year = "2017",
-      url = "https://www.videolan.org/vlc/features.html",
-      note = "[Online; accessed 21-November-2017]"
+      url = "http://www.cs.uregina.ca/Links/class-info/301/ARM-addressing/lecture.html",
+      note = "[Online; accessed 4-December-2017]"
 }
 
 
@@ -38,7 +38,7 @@
       title = "Choosing High Performance Storage Is Not About RPM Anymore",
       year = "2017",
       url = "https://www.seagate.com/tech-insights/choosing-high-performance-storage-is-not-about-rpm-anymore-master-ti/",
-      note = "[Online; accessed 21-November-2017]"
+      note = "[Online; accessed 4-December-2017]"
 }
 
 @misc{ m.2:information,
@@ -46,7 +46,7 @@
       title = "M.2 SSD roundup: Tiny drives deliver huge performance",
       year = "2017",
       url = "https://www.pcworld.com/article/2977024/storage/m2-ssd-roundup-tiny-drives-deliver-huge-performance.html",
-      note = "[Online; accessed 21-November-2017]"
+      note = "[Online; accessed 4-December-2017]"
 }
 
 @misc{ m.2:information2,
@@ -54,7 +54,7 @@
       title = "Understanding M.2, the interface that will speed up your next SSD",
       year = "2017",
       url = "https://arstechnica.com/gadgets/2015/02/understanding-m-2-the-interface-that-will-speed-up-your-next-ssd/",
-      note = "[Online; accessed 21-November-2017]"
+      note = "[Online; accessed 4-December-2017]"
 }
 
 @misc{ tx2:specs,
@@ -62,7 +62,7 @@
       title = "Harness AI at the Edge with the Jetson TX2 Developer Kit",
       year = "2017",
       url = "https://developer.nvidia.com/embedded/buy/jetson-tx2-devkit",
-      note = "[Online; accessed 21-November-2017]"
+      note = "[Online; accessed 4-December-2017]"
 }
 
 @misc{ tx1:specs,
@@ -70,7 +70,7 @@
       title = "Harness AI at the Edge with the Jetson TX1 Developer Kit",
       year = "2017",
       url = "https://developer.nvidia.com/embedded/buy/jetson-tx1-devkit",
-      note = "[Online; accessed 21-November-2017]"
+      note = "[Online; accessed 4-December-2017]"
 }
 
 
@@ -79,5 +79,5 @@
       title = "Rasberry Pi 3 Is Out Now",
       year = "2017",
       url = "https://www.raspberrypi.org/magpi/raspberry-pi-3-specs-benchmarks/",
-      note = "[Online; accessed 21-November-2017]"
+      note = "[Online; accessed 4-December-2017]"
 }
