almost finished, just add section for ARM memory subsystem and proofread

--- a/final/cs472_final_wongnich.bib
+++ b/final/cs472_final_wongnich.bib
@@ -33,51 +33,79 @@
 }
 
 
-@misc{ storage:information,
-      author = "SEAGATE",
-      title = "Choosing High Performance Storage Is Not About RPM Anymore",
+@misc{ ARM:Registers,
+      author = "ARM",
+      title = "ARM Software Development Tools",
       year = "2017",
-      url = "https://www.seagate.com/tech-insights/choosing-high-performance-storage-is-not-about-rpm-anymore-master-ti/",
+      url = "http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.dui0473c/Babdfiih.html",
       note = "[Online; accessed 4-December-2017]"
 }
 
-@misc{ m.2:information,
-      author = "Jon L. Jacobi",
-      title = "M.2 SSD roundup: Tiny drives deliver huge performance",
-      year = "2017",
-      url = "https://www.pcworld.com/article/2977024/storage/m2-ssd-roundup-tiny-drives-deliver-huge-performance.html",
+@misc{ ARM:Data,
+      author = "Arm",
+      title = "Cortex-A57 Software Optimization Guide",
+      year = "2016",
+      url = "http://infocenter.arm.com/help/topic/com.arm.doc.uan0015b/Cortex\_A57\_Software\_Optimization\_Guide\_external.pdf",
       note = "[Online; accessed 4-December-2017]"
 }
 
-@misc{ m.2:information2,
-      author = "Andrew Cunningham",
-      title = "Understanding M.2, the interface that will speed up your next SSD",
-      year = "2017",
-      url = "https://arstechnica.com/gadgets/2015/02/understanding-m-2-the-interface-that-will-speed-up-your-next-ssd/",
+@misc{ ARM:Instructions,
+      author = "Mark McDermott",
+      title = "The ARM Instruction Set Architecture",
+      year = "2008",
+      url = "http://users.ece.utexas.edu/~valvano/EE345M/Arm\_EE382N\_4.pdf",
       note = "[Online; accessed 4-December-2017]"
 }
 
-@misc{ tx2:specs,
-      author = "Nvidia",
-      title = "Harness AI at the Edge with the Jetson TX2 Developer Kit",
+@misc{ ARM:HPC,
+      author = "ARM",
+      title = "Arm HPC tools and libraries",
       year = "2017",
-      url = "https://developer.nvidia.com/embedded/buy/jetson-tx2-devkit",
+      url = "https://developer.arm.com/products/software-development-tools/hpc/arm-compiler-for-hpc",
       note = "[Online; accessed 4-December-2017]"
 }
 
-@misc{ tx1:specs,
-      author = "Nvidia",
-      title = "Harness AI at the Edge with the Jetson TX1 Developer Kit",
-      year = "2017",
-      url = "https://developer.nvidia.com/embedded/buy/jetson-tx1-devkit",
+@misc{ ARM:Small,
+      author = "Margaret Rouse",
+      title = "ARM processor",
+      year = "2015",
+      url = "http://whatis.techtarget.com/definition/ARM-processor",
       note = "[Online; accessed 4-December-2017]"
 }
 
 
-@misc{ rasberry:specs,
-      author = "MagPi",
-      title = "Rasberry Pi 3 Is Out Now",
+@misc{ ARM:Thumb,
+      author = "ARM",
+      title = "The Thumb instruction set",
+      year = "2004",
+      url = "http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.ddi0210c/CACBCAAE.html",
+      note = "[Online; accessed 4-December-2017]"
+}
+@misc{ 8080:Intro,
+      author = "CPU-World",
+      title = "Intel 8080 family",
       year = "2017",
-      url = "https://www.raspberrypi.org/magpi/raspberry-pi-3-specs-benchmarks/",
+      url = "http://www.cpu-world.com/CPUs/8080/",
+      note = "[Online; accessed 4-December-2017]"
+}
+@misc{ 8080:Instruction,
+      author = "Tarun Agarwal",
+      title = "Introduction to 8080 Microprocessor and its Architecture",
+      year = "2015",
+      url = "https://www.elprocus.com/know-about-architecture-of-the-intel-8080-microprocessor/",
+      note = "[Online; accessed 4-December-2017]"
+}
+@misc{ 8080:Registers,
+      author = "CPU-World",
+      title = "Intel 8080 microprocessor architecture",
+      year = "2016",
+      url = "http://www.cpu-world.com/Arch/8080.html",
+      note = "[Online; accessed 4-December-2017]"
+}
+@misc{ 8080:Datapath,
+      author = "Intel",
+      title = "intel 8080 assembly programming manual",
+      year = "1975",
+      url = "http://altairclone.com/downloads/manuals/8080\%20Programmers\%20Manual.pdf",
       note = "[Online; accessed 4-December-2017]"
 }
