added memory subsystem and its citations. Finished document

--- a/final/cs472_final_wongnich.bib
+++ b/final/cs472_final_wongnich.bib
@@ -72,8 +72,20 @@
       url = "http://whatis.techtarget.com/definition/ARM-processor",
       note = "[Online; accessed 4-December-2017]"
 }
-
-
+@misc{ ARM:MMU,
+      author = "ARM",
+      title = "Cortex™-A8: Technical Reference Manual",
+      year = "2009",
+      url = "http://infocenter.arm.com/help/topic/com.arm.doc.ddi0344i/DDI0344I\_cortex\_a8\_r3p1\_trm.pdf",
+      note = "[Online; accessed 4-December-2017]"
+}
+@misc{ ARM:Memory,
+      author = "ARM",
+      title = "Principles of ARM® Memory Maps ",
+      year = "2012",
+      url = "http://infocenter.arm.com/help/topic/com.arm.doc.den0001c/DEN0001C\_principles\_of\_arm\_memory\_maps.pdf",
+      note = "[Online; accessed 4-December-2017]"
+}
 @misc{ ARM:Thumb,
       author = "ARM",
       title = "The Thumb instruction set",
@@ -109,3 +121,4 @@
       url = "http://altairclone.com/downloads/manuals/8080\%20Programmers\%20Manual.pdf",
       note = "[Online; accessed 4-December-2017]"
 }
+
